<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RegisterationBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical|center"
        android:layout_marginTop="50dp"
        android:background="@drawable/sign_in" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/registrationFormLayout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="60dp"
            android:layout_weight="0.38"
            android:background="#00000000"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:ems="10"
                android:fadingEdge="none"
                android:hint="@string/emailaddress"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@android:color/holo_red_light"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHighlight="@android:color/holo_red_light"
                android:textColorHint="@android:color/darker_gray" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_gravity="right"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0.17"
        android:orientation="vertical">

        <Button
            android:id="@+id/btLogin"
            android:layout_width="109dp"
            android:layout_height="25dp"
            android:layout_gravity="right"
            android:background="@android:color/holo_red_light"
            android:text="@string/login_button"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_horizontal"
        android:layout_marginLeft="80dp"
        android:text="Forgot Your Password?"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />


</LinearLayout>


